@@ -3,6 +3,7 @@ xine-lib (1-rc4)
   * auto hidding of the subtitles
   * raw AAC file demuxer
   * fix starvation problem with kernel 2.6 NPTL
+  * not overwrite the files by saving plugin
 
 xine-lib (1-rc3)
   * fix dvd menu blending when using tvtime plugin (yuy2 blend)
